<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DecompilerWidget</class>
 <widget class="QDockWidget" name="DecompilerWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>555</width>
    <height>393</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Decompiler</string>
  </property>
  <widget class="QWidget" name="dockWidgetContents">
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>0</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
    <property name="topMargin">
     <number>0</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
     <widget class="QPlainTextEdit" name="textEdit">
      <property name="lineWrapMode">
       <enum>QPlainTextEdit::NoWrap</enum>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
        <layout class="QHBoxLayout" name="progressLayout">
         <property name="leftMargin">
          <number>8</number>
         </property>
         <item>
          <widget class="QLabel" name="progressLabel">
           <property name="text">
            <string>Decompiling...</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="cancelButton">
           <property name="text">
            <string>Cancel</string>
           </property>
           <property name="visible">
            <bool>false</bool>
           </property>
          </widget>
         </item>
        </layout>      </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QLabel" name="decompilerLabel">
        <property name="text">
         <string>Decompiler:</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="decompilerComboBox"/>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
